--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <ul id="header-nav" class = "navbar-links">
         <li><a href="about.html">About</a></li>
         <li><a href="mailto:thecryptodeity@gmail.com">Contact</a></li>
-        <li><a href="Games/Satoshi's HODL.html">Games</a></li>
+        <li><a href="Satoshi's HODL.html">Games</a></li>
       </ul>
     </div>
 
