--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ call it by-->
       <ul id="header-nav" class="navbar-links">
         <li><a href="about.html">About</a></li>
         <li><a href="mailto:thecryptodeity@gmail.com">Contact</a></li>
-      <li><a href="Games/Satoshi's HODL.html">Games</a></li>
+      <li><a href="Satoshi's HODL.html">Games</a></li>
       </ul>
 
     </div>
